# CimentDoux

./: .gitignore  CMakeLists.txt  README.md
TP1/: CMakeLists.txt
TP1-2/TP1/: TP1
TP1-2/common/: texture.cpp  texture.hpp
TP1/TP1/: FastNoiseLit.h  TP1.cpp  chair.off  fragment_shader.glsl  vertex_shader.glsl
TP1/common/: controls.cpp
TP3/: .gitignore  run_main.sh
TP3/include/: Mesh.hpp  Shader.hpp  Sphere.hpp  Texture.hpp  Transform.hpp  objloader.hpp
TP3/shaders/: star_shader.frag  star_shader.vert  vs.vert
TP3/src/: Mesh.cpp  SceneNode.cpp  Sphere.cpp  main.cpp  objloader.cpp  stb_image.cpp
TP4/: CMakeLists.txt
TP4/data/models/backpack/: backpack.mtl
TP4/include/: Mesh.hpp  Model.hpp  Plane.hpp  PlaneCollider.hpp  SceneNode.hpp  Sphere.hpp
TP4/shaders/: fs.frag
TP4/src/: Mesh.cpp  Model.cpp  Plane.cpp  PlaneCollider.cpp  Sphere.cpp  Texture.cpp  main.cpp
TP5/: CMakeLists.txt
TP5/.cache/clangd/index/: 3DSConverter.cpp.16A5916A986F06AE.idx  3DSExporter.cpp.B20CDC742960EB1C.idx  3DSExporter.h.8D0D07A0B3FC8733.idx  3DSHelper.h.FD6FB9A9133BD244.idx  3DSLoader.cpp.8950E904BF9963E7.idx  3DSLoader.h.9D47BF4F417C0131.idx  3MFTypes.h.92E387F42E43E7C2.idx  3MFXmlTags.h.65F8CF8FEF663B16.idx  ACLoader.cpp.693083D0AB9FF560.idx  ACLoader.h.8F5C30B8D9FE64F9.idx  AMFImporter.cpp.AEC65621D794B47C.idx  AMFImporter.hpp.AED5F62674318682.idx  AMFImporter_Geometry.cpp.3347A8EAB1A30E26.idx  AMFImporter_Material.cpp.2EB31F37E1811F7C.idx  AMFImporter_Node.hpp.011DF2B3B1782191.idx  AMFImporter_Postprocess.cpp.9FC50073297270FD.idx  ASELoader.cpp.FF49631A7103F1E2.idx  ASELoader.h.12E98D78D6B09AA7.idx  ASEParser.cpp.12EC0658E1A60297.idx  ASEParser.h.06512A566DC0EEEF.idx  AbstractImportExportBase.cpp.BD873B6764F51B40.idx  AbstractImportExportBase.h.F226DBE1255FCF10.idx  ArmaturePopulate.cpp.5E95E1A1A80A1137.idx  ArmaturePopulate.h.06601CE7944F9DA5.idx  AssbinExporter.cpp.B3981730CA4B9F04.idx  AssbinFileWriter.cpp.2B8D2D8933E58413.idx  AssbinFileWriter.h.1A12CCEC701602C3.idx  AssbinLoader.cpp.34851B940A2DF805.idx  AssbinLoader.h.7B9107ADF5D98DDE.idx  AssertHandler.cpp.683DBB8C40EE573E.idx  AssertHandler.h.BCEA3AABC002062C.idx  Assimp.cpp.ABEA44DA41BC22F1.idx  AssimpAPITest.cpp.B2060FF6611D4EEC.idx  AssimpAPITest_aiMatrix3x3.cpp.1EA0B239613B6DD6.idx  AssimpAPITest_aiMatrix4x4.cpp.25F879E9C9744457.idx  AssimpAPITest_aiQuaternion.cpp.32AF0BEA751EB854.idx  AssimpAPITest_aiVector2D.cpp.8F9792F6BAA6F0E4.idx  AssimpAPITest_aiVector3D.cpp.865150AFF1AD0E64.idx  AssimpCExport.cpp.C1D3F8209751FDF5.idx  AssxmlExporter.cpp.8F7C80855A0FE321.idx  (+813 more)
TP5/include/: Cube.hpp  Mesh.hpp  PlaneCollider.hpp  SceneNode.hpp  Sphere.hpp
TP5/shaders/: fs.frag
TP5/src/: Camera.cpp  Camera_Helper.cpp  Cube.cpp  Model.cpp  Plane.cpp  PlaneCollider.cpp  SceneNode.cpp  Sphere.cpp  main.cpp
TP6/: CMakeLists.txt
TP6/TP/Actor/: Actor.cpp  Actor.hpp
TP6/TP/Camera/: Camera.cpp
TP6/common/: objloader.hpp  quaternion_utils.cpp
TPCamera/: .gitignore  CMakeLists.txt
TPCamera/TP/: TP  TP.cpp  fragment_shader.glsl  imgui.ini  vertex_shader.glsl
TPCamera/TP/Actor/: Actor.cpp  ObjController.cpp  ObjController.hpp
TPCamera/TP/Camera/: Camera.cpp  Camera.hpp  Camera_Helper.cpp  Camera_Helper.hpp  Camera_Shake.cpp  Camera_Shake.hpp
TPCamera/common/: controls.cpp  quaternion_utils.hpp
TPCamera/imgui/: imgui_impl_glfw.cpp
include/: AABB.hpp  Camera.hpp  DirectionalLight.hpp  Mesh.hpp  Player.hpp  Scene.hpp  ShadowMap.hpp  Texture copy.hpp  TorchLight.hpp  Transform.hpp  Window.hpp
moteur/: .gitignore  CMakeLists.txt
moteur/data/models/capsule/: capsule.gltf
moteur/data/models/ciment_doux/: Ciment_doux_level.mtl
moteur/data/models/map/: Ciment_doux_level_v2.mtl  map.mtl
moteur/data/models/map2/: map2.fbx  map2.mtl
moteur/data/models/map_final_ben/: Ciment_doux_level_v2.mtl
moteur/data/models/mapfbx/: map.fbx
moteur/data/models/mapsansnormale/: map_sans_normales.mtl
moteur/data/models/plant1/: eb_house_plant_01.fbx
moteur/data/models/platform/: Bush.glb  FloorDirtSmall.glb  GreyBricks.glb  LowBuilding.glb
moteur/data/models/test/: test.mtl
moteur/data/models/test_text/: a.mtl  test_text.mtl
moteur/data/models/testmtl/: testmtl_et_triang.mtl
moteur/data/textures/: pierre_normal
moteur/include/: AABB.hpp  Camera.hpp  DirectionalLight.hpp  Light.hpp  LightManager.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelCollider.hpp  PhysicsEngine.hpp  Plane.hpp  Player.hpp  PointLight.hpp  RigidBody.hpp  Scene.hpp  SceneNode.hpp  Shader.hpp  ShaderManager.hpp  ShadowMap.hpp  Texture.hpp  TorchLight.hpp  Transform.hpp  Window.hpp  quaternion_utils.hpp
moteur/libs/: libmpg123.so.0
moteur/shaders/: LampeTorche.frag  LampeTorche.vert  LampeTorchePhong.vert  PBR.frag  aabb.frag  aabb.vert  fs.frag  phong.frag  shadow.fs  shadow.gs  shadow.vs  test.fs  test.vs  vs.vert
moteur/src/: AABB.cpp  Camera.cpp  Cube.cpp  DirectionalLight.cpp  LightManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelCollider.cpp  PhysicsEngine.cpp  Player.cpp  PointLight.cpp  RigidBody.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  ShaderManager.cpp  ShadowMap.cpp  Sphere.cpp  Texture.cpp  TorchLight.cpp  Transform.cpp  Window.cpp  main.cpp  main.txt  quaternion_utils.cpp
ordi_lent/: CMakeLists.txt  Scene.cpp
shaders/: LampeTorchePhong.frag  aabb.vert  fs.frag  test.fs  test.vs
src/: Camera_Helper.cpp  Mesh.cpp  ModelCollider.cpp  PhysicsEngine.cpp  PointLight.cpp  RigidBody.cpp  Scene.cpp  ShadowMap.cpp  Texture.cpp  TorchLight.cpp  imgui.ini  main.cpp
